Fixes logo alignment issues

--- a/style.scss
+++ b/style.scss
@@ -1894,6 +1894,9 @@ form.search {
             display: inline-block;
         }
     }
+    .logo{
+        text-align: center !important;
+    }
 }
 
 @media(max-width: 767px) {
